--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -12,6 +12,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       -
+        name: Test
+        run: echo "================== $DOCKER_IMAGE_NAME_PART ${{ DOCKER_IMAGE_NAME_PART }}"
+
+      -
         name: Set up QEMU
         uses: docker/setup-qemu-action@v3
       -
