--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -13,7 +13,7 @@ jobs:
     steps:
       -
         name: Test
-        run: echo "================== $DOCKER_IMAGE_NAME_PART ${{ DOCKER_IMAGE_NAME_PART }}"
+        run: echo ${{ DOCKER_IMAGE_NAME_PART }}
 
       -
         name: Set up QEMU
