--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -13,7 +13,7 @@ jobs:
     steps:
       -
         name: Test
-        run: echo ${{ env.DOCKER_IMAGE_NAME_PART }}
+        run: echo ${{ env.GITHUB_REPOSITORY_NAME_PART }}
 
       -
         name: Set up QEMU
@@ -32,4 +32,4 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/${{ env.DOCKER_IMAGE_NAME_PART }}:latest
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/${{ env.GITHUB_REPOSITORY_NAME_PART }}:latest
