--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -11,10 +11,8 @@ jobs:
     name: Build docker
     runs-on: ubuntu-latest
     steps:
-      -
-        name: Test
-        run: echo ${{ env.GITHUB_REPOSITORY_NAME_PART }}
-
+      - 
+        uses: rlespinasse/github-slug-action@v4
       -
         name: Set up QEMU
         uses: docker/setup-qemu-action@v3
