--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -14,6 +14,8 @@ jobs:
       - 
         uses: rlespinasse/github-slug-action@v4
       -
+        uses: cardinalby/git-get-release-action@v1
+      -
         name: Set up QEMU
         uses: docker/setup-qemu-action@v3
       -
