--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -14,8 +14,6 @@ jobs:
       - 
         uses: rlespinasse/github-slug-action@v4
       -
-        uses: cardinalby/git-get-release-action@v1
-      -
         name: Set up QEMU
         uses: docker/setup-qemu-action@v3
       -
@@ -31,6 +29,7 @@ jobs:
         name: Build and push
         uses: docker/build-push-action@v5
         with:
+          context: .
           push: true
           tags: |
             ${{ secrets.DOCKERHUB_USERNAME }}/${{ env.GITHUB_REPOSITORY_NAME_PART }}:${{ env.github.event.release.tag_name }}
