--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -11,6 +11,12 @@ jobs:
     name: Build docker
     runs-on: ubuntu-latest
     steps:
+      -
+        uses: battila7/get-version-action@v2
+
+      - run: echo ${{ steps.get_version.outputs.version }}
+      - run: echo ${{ steps.get_version.outputs.version-without-v }}
+    
       - 
         uses: rlespinasse/github-slug-action@v4
       -
