--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -2,9 +2,10 @@ name: build_docker
 
 on:
   push:
-    branches: [main]
-  release:
-    types: [created] # 表示在创建新的 Release 时触发
+    tags: [ 'v*.*.*' ]
+  #  branches: [main]
+ # release:
+  #  types: [created] # 表示在创建新的 Release 时触发
 
 jobs:
   build_docker:
