--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,12 +1,9 @@
 name: build_docker
 
 on:
-  push:
-   # tags: [ 'v*.*.*' ]
-    branches: [main]
   release:
-    types: [created] # 表示在创建新的 Release 时触发
-
+    types: [published]
+    
 jobs:
   build_docker:
     name: Build docker
