--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -8,6 +8,11 @@ jobs:
   build_docker:
     name: Build docker
     runs-on: ubuntu-latest
+    environment: hub_docker
+    env:
+      DOCKER_USERNAME: ${{ vars.DOCKERHUB_USERNAME }}
+      DOCKER_TOKEN: ${{ vars.DOCKERHUB_TOKEN }}
+
     steps:
       - name: Check out the repo
         uses: actions/checkout@v4
@@ -23,8 +28,8 @@ jobs:
         name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          username: $DOCKER_USERNAME
+          password: $DOCKER_TOKEN
       -
         name: Build and push
         uses: docker/build-push-action@v5
