--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -10,10 +10,6 @@ jobs:
     name: Build docker
     runs-on: ubuntu-latest
     environment: hub_docker
-    env:
-      DOCKER_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
-      DOCKER_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
-
     steps:
       - name: Check out the repo
         uses: actions/checkout@v4
@@ -29,8 +25,8 @@ jobs:
         name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
-          username: $DOCKER_USERNAME
-          password: $DOCKER_TOKEN
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
       -
         name: Build and push
         uses: docker/build-push-action@v5
@@ -38,5 +34,5 @@ jobs:
           context: .
           push: true
           tags: |
-            $DOCKER_USERNAME/${{ env.GITHUB_REPOSITORY_NAME_PART }}:${{ env.GITHUB_REF_NAME }}
-            $DOCKER_USERNAME/${{ env.GITHUB_REPOSITORY_NAME_PART }}:latest
+            ${{ secrets.DOCKERHUB_TOKEN }}/${{ env.GITHUB_REPOSITORY_NAME_PART }}:${{ env.GITHUB_REF_NAME }}
+            ${{ secrets.DOCKERHUB_TOKEN }}/${{ env.GITHUB_REPOSITORY_NAME_PART }}:latest
