--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -3,8 +3,8 @@ name: build_docker
 on:
   workflow_dispatch:
   push:
-    tags:
-      - 'v[0-9]+.[0-9]+.[0-9]+'
+ #   tags:
+  #    - 'v[0-9]+.[0-9]+.[0-9]+'
 jobs:
   build_docker:
     name: Build docker
