--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -3,9 +3,9 @@ name: build_docker
 on:
   workflow_dispatch:
   push:
-    tags:
+    branches: [ main ]
+    tags: ['v*.*.*' ]
       #- 'v[0-9]+.[0-9]+.[0-9]+'
-      - '*'
 jobs:
   build_docker:
     name: Build docker
