--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -3,7 +3,7 @@ name: build_docker
 on:
   #workflow_dispatch:
   push:
-    branches: [ main ]
+    #branches: [ main ]
     tags: ['v*.*.*' ]
       #- 'v[0-9]+.[0-9]+.[0-9]+'
 jobs:
