--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -4,7 +4,8 @@ on:
   workflow_dispatch:
   push:
     #branches: [ main ]
-    tags: ['v*.*.*' ]
+    tags:
+      ["v*.*.*"]
       #- 'v[0-9]+.[0-9]+.[0-9]+'
 jobs:
   build_docker:
@@ -14,22 +15,17 @@ jobs:
     steps:
       - name: Check out the repo
         uses: actions/checkout@v4
-      - 
-        uses: rlespinasse/github-slug-action@v4
-      -
-        name: Set up QEMU
+      - uses: rlespinasse/github-slug-action@v4
+      - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
-      -
-        name: Set up Docker Buildx
+      - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
-      -
-        name: Login to Docker Hub
+      - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-      -
-        name: Build and push
+      - name: Build and push
         uses: docker/build-push-action@v5
         with:
           context: .
@@ -37,15 +33,13 @@ jobs:
           tags: |
             ${{ secrets.DOCKERHUB_USERNAME }}/${{ env.GITHUB_REPOSITORY_NAME_PART }}:${{ env.GITHUB_REF_NAME }}
             ${{ secrets.DOCKERHUB_USERNAME }}/${{ env.GITHUB_REPOSITORY_NAME_PART }}:latest
-      -
-        name: SSH Remote Commands
+      - name: SSH Remote Commands
         uses: appleboy/ssh-action@v1.0.3
         with:
-          host: aileg.io
+          host: 35.92.54.212
           username: root
           key: ${{ secrets.SSH_AILEG_KEY }}
           script: |
             docker stop aileg-web && aileg-web
             docker pull onmybob/aileg-web:latest
             docker run -p 80:3000 -d onmybob/aileg-web
-            
