--- a/package.json
+++ b/package.json
@@ -12,13 +12,13 @@
     "add": "^2.0.6",
     "clsx": "^2.1.0",
     "dropdown-menu": "^0.1.1",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.331.0",
     "next": "14.1.0",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
-    "react-native-clarity": "^2.1.0",
     "shadcn-ui": "^0.8.0",
     "zustand": "^4.5.0"
   },
