--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -40,7 +40,7 @@ jobs:
           username: root
           key: ${{ secrets.SSH_AILEG_KEY }}
           script: |
-            docker stop aileg-web && aileg-web
+            docker stop aileg-web
             docker rm -f aileg-web
             docker pull onmybob/aileg-web:latest
             docker run -p 80:3000 -d onmybob/aileg-web
