--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -43,4 +43,4 @@ jobs:
             docker stop aileg-web
             docker rm -f aileg-web
             docker pull onmybob/aileg-web:latest
-            docker run -p 80:3000 -d onmybob/aileg-web
+            docker run --name aileg-web -p 80:3000 -d onmybob/aileg-web
